# cuda_repaso

./: CMakeLists.txt  bordes_cuda.cpp  bordes_cuda.h  bords.cu  espejo.cpp  espejo.cu  espejo.h  kernel.cu  main_cuda.cpp  mediana.cu  mediana_cuda.cpp  mediana_cuda.h  rotacion.cu  rotacion_cuda.cpp  rotacion_cuda.h  sobel.cu  sobel_main.cpp  sobel_main.h  suma.cu  suma_cuda.cpp  suma_cuda.h
